--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "twig/twig": "~1.0",
-        "opis/colibri": "2.0@dev"
+        "opis/colibri": "2.0.*@dev"
     },
     "autoload": {
         "psr-4": {
