--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         }
     ],
     "require": {
-        "twig/twig": "~1.0",
-        "opis/colibri": "2.0.*@dev"
+        "twig/twig": "~1.0"
+    },
+    "require-dev": {
+        "opis/colibri": "2.0.x-dev"
     },
     "autoload": {
         "psr-4": {
