--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
         }
     ],
     "require": {
-        "twig/twig": "~1.0"
-    },
-    "require-dev": {
+        "twig/twig": "~1.0",
         "opis/colibri": "2.0.x-dev"
     },
     "autoload": {
