--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,27 @@
         {
             "name": "Marius Sarca",
             "email": "marius.sarca@gmail.com"
+        },
+        {
+            "name": "Sorin Sarca",
+            "email": "sarca_sorin@hotmail.com"
         }
     ],
     "require": {
         "twig/twig": "~2.0",
         "opis/colibri": "2.0.x-dev"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^7.0"
+    },
     "autoload": {
         "psr-4": {
             "Opis\\Colibri\\Modules\\Twig\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Opis\\Colibri\\Modules\\Twig\\Test\\": "tests/"
         }
     },
     "config": {
