--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "opis-colibri-module",
     "description": "Allows you to use Twig templates inside your Opis Colibri based project",
     "keywords": ["opis", "colibri", "module", "twig module", "templating"],
-    "homepage": "http://opis.io",
+    "homepage": "https://opis.io",
     "license": "Apache-2.0",
     "authors": [
         {
@@ -17,10 +17,10 @@
     ],
     "require": {
         "twig/twig": "~2.0",
-        "opis-colibri/core": "^1.0"
+        "opis-colibri/core": "2020.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
@@ -44,7 +44,7 @@
             "installer": "Opis\\Colibri\\Modules\\Twig\\Installer"
         },
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "2020.x-dev"
         }
     }
 }
