--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "twig/twig": "~2.0",
+        "twig/twig": "^3.0",
         "opis-colibri/core": "2020.x-dev"
     },
     "require-dev": {
